--- a/projects/index.html
+++ b/projects/index.html
@@ -28,7 +28,8 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
 
-  <link type="text/css" rel="stylesheet" href="../css/style.css"/>
+
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -57,6 +58,7 @@
 <nav>
   <h1>Project Page & Some Helpful Links</h1><br>
 
+
 </nav>
   <p>
     <ol>
@@ -81,8 +83,11 @@
   <li><a href="https://www.youtube.com/watch?v=eg1-8ts9cFc">Youtube Classes</a></li>
   <li><a href="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">jQuery</script></li>
   <li><a href="https://javascript.info/array">Javascript Info</a></li>
-</ul>
+  <li><a href="https://jsbin.com/lopoyutolu/edit?html,js">Jsbin</a></li>
+  <li><a href="https://www.smartdraw.com/uml-diagram/uml-diagram-tool.htm">Smartdraw</a></li>
+  <li><a href="https://jsonplaceholder.typicode.com/posts">Jsonplaceholder</a></li>
 
+</ul>
 
 
 
