--- a/larry/index.html
+++ b/larry/index.html
@@ -68,7 +68,7 @@
   <p id="ptt">
     <button style="background-color:transparent" class="btn showcase"> <a href="https://twp2studentshowcase.netlify.com/">Showcase</a></button>
     <button style="background-color:transparent" class="btn showcase"><a href="../Bookstore-Boilerplate/index.html">Bookstore | Hackathon</button>
-    <button style="background-color:transparent" class="btn choose"><a href="file:///C:/Users/TechTown/Code/SavvyCoders/DemoNight/project/index.html">Choose Your Adv</a></button>
+    <button style="background-color:transparent" class="btn choose"><a href="../project/index.html">Choose Your Adv</a></button>
     <button style="background-color:transparent" class="btn rock"><a href="../rps/index.html">Rock, Paper, Scissors</button>
     <!-- <button style="background-color:transparent" class="btn cyoa">Cyoa</button> -->
   </p>
