--- a/project/index.html
+++ b/project/index.html
@@ -14,7 +14,7 @@
 <h1 class="proj1">Choose Your Own Adventure</h1>
 
 <!-- <button type="btn2" name="button"><a href="file:///C:/Users/TechTown/Code/SavvyCoders/DemoNight/larry/index.html"><h1>Home</h1></a></button> -->
-<button style="background-color:transparent" class="btn showcase"> <a href="file:///C:/Users/TechTown/Code/SavvyCoders/DemoNight/larry/index.html">Home</a></button>
+<button style="background-color:transparent" class="btn showcase"> <a href="../larry/index.html">Home</a></button>
 </div>
 <div class="pong1">
 </div>
