--- a/index.html
+++ b/index.html
@@ -1,115 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <style color="green">
-  body{
-    background-color:yellow;
-  }
-  body{
-    font-family: cursive;
-  }
-
-
-
-  </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Home Page</title>
-  <nav>
-  <center>
-
-    <button>
-    <a href="../index.html"class="button">Home</a> |
-    <a href="../projects/index.html"class="button">Projects</a> |
-    <a href="../contact/index.html"class="button">Contact</a> |
-    <a href="../blog/index.html"class="button">Blog</a> |
-    <a href="/Media"class="button">Media</a> |</center></button>
-  </nav>
-
-
-  <style color="green">
-    h1{
-      font-family: cursive;
-    }
-    p {
-      color: blue;
-    }
-    col
-    .secondary {
-      color:red;
-    }
-
-    .big {
-      font-family:cursive;
-    }
-    html{
-      box-sizing: border-box;
-    }
-  *{
-    border: 10px;
-    border-radius: 75px;
-  }
-  div {
-      padding-top: 10px;
-      padding-right: 20px;
-      padding-bottom: 5px;
-      padding-left: 20px;
-  }
-  body{
-    background-color:yellow;
-  }
-  body{
-    font-family:  cursive;
-  }
-
-  div {
-      padding: 5px 10px 5px 10px;
-  }
-  div {
-      padding: 5px 10px;
-  }
-  div {
-      box-sizing: border-box;
-      width: 0px;
-      height: 0px;
-  }
-  div {
-      box-sizing: border-box;
-      width: 50px;
-      height: 50px;
-  }
-    .important {
-      color: orange;
-    }
-  </style>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title a href="home"> Home Page</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/master.css">
 </head>
-<!-- for your landing page -->
-<link type="text/css" rel="stylesheet" href="css/style.css"/>
+
 <body>
 
+<nav>
+<ul>
+  <li><a href="#">Home</a></li>
+  <li><a href="#tes3">About</a></li>
+  <li><a href="#tes2">Project</a>
+    <ul>
+       <li><a href="https://twp2studentshowcase.netlify.com/">Class Showcase</a></li>
+       <li><a href="../project/index.html">Choose Your Own Adv</a></li>
+       <li><a href="../Bookstore-Boilerplate/index.html">Bookstore | Hackathon</a></li>
+       <li><a href="../rps/index.html">Rock, Paper, or Scissors</a></li>
+    </ul>
+  </li>
+  <li><a href="#test">Blog</a></li>
+  <li><a href="#test"> Media</a>
+    <!-- <ul>
+        <li><a href="#">Radio</a></li>
+        <li><a href="../AAMH/index.html">Youtube</a></li>
+    </ul> -->
+  </li>
+  <li><a href="#con">Contact</a></li>
+ </ul>
+</nav>
 
+
+  </div>
+  <div class="ping1">
+    <div class="ptext">
+      <span class="border">
+        Welcome to Larry Hudson's Webpage
+      </span>
+    </div>
+  </div>
+
+
+  <section class="section section-dark">
+    <h2 id="tes3">About</h2>
+    <p>My name is Larry Hudson Jr.  I am a father of 4 males and a husband for 16yrs. I am an active and positive person. I try to find positive things in each day of my life. I cannot say that this eliminates negative things, but it helps me to appreciate every pleasant thing that I have. I enjoy learning new things. Taking on this coding class was very exciting for me. I learned way more than I anticipated and am very proud of the things Ive been able to accomplish. I met a lot of wonderful people both in the coding class and teaching it. I really hope you have enjoyed viewing my site and much as I enjoyed creating it. The last thing I want to advise you is to get positive moments out of every day of your life because time passes on and every day is unique.
+
+
+    </p>
+  </section>
+
+  <div class="ping2">
+    <div class="ptext">
+      <span class="border trans">
+        Well Thought Out Plan
+      </span>
+    </div>
+  </div>
+
+  <section class="section section-dark">
+    <h2 id="tes2">Projects</h2>
+  <p id="ptt">
+    <button style="background-color:transparent" class="btn showcase"> <a href="https://twp2studentshowcase.netlify.com/">Showcase</a></button>
+    <button style="background-color:transparent" class="btn showcase"><a href="../Bookstore-Boilerplate/index.html">Bookstore | Hackathon</button>
+    <button style="background-color:transparent" class="btn choose"><a href="../project/index.html">Choose Your Adv</a></button>
+    <button style="background-color:transparent" class="btn rock"><a href="../rps/index.html">Rock, Paper, Scissors</button>
+    <!-- <button style="background-color:transparent" class="btn cyoa">Cyoa</button> -->
+  </p>
+    </div>
+  </section>
+
+  <div class="ping2">
+    <div class="ptext">
+      <span class="border trans">
+        Thoughts Of Success
+      </span>
+    </div>
+  </div>
+  <section class="section section-dark">
+    <h2 id="test">Blog | Media</h2>
+
+   <div class="#">
+      <a href="../blog/index.html" class="button">Blog</a>
+      <a href="../AAMH/index.html" class="button"> Media</a>
+    </div>
+
+
+
+      <!-- <button class="btn blog">Blog</button>
+      <button class="btn youtube">Youtube</button> -->
+  </section>
+
+
+  <div class="ping3">
+    <div class="ptext">
+      <span class="border trans">
+        Stategic Planning
+      </span>
+    </div>
+  </div>
+  <section class="section section-dark">
+
+<!-- contact page -->
+
+    <h2 id="con">Contact</h2>
+    <div class="container">
+      <form action="https://formspree.io/lhudson322@gmail.com"method="POST">
+        <label for="fname">First Name</label>
+        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+        <label for="lname">Last Name</label>
+        <input type="text" id="lname" name="lastname" placeholder="Your last name.."><br>
+
+        <label for="email">Email</label>
+        <input type="text" id="email" name="email" placeholder="Your Email..">
+      </select><br>
+
+        <label> What's this message about?<br><br>
+  <input type="radio" name="subject" value="professional" checked><span>I'd like to hire you!</span>
+  <input type="radio" name="subject" value="personal" checked><span>Personal message</span>
+  <input type="radio" name="subject" value="other" checked><span>Don't know/something else</span>
+</label><br>
+
+<input type="checkbox" name="optin" value="trusting" checked>Subscribe me to your newsletter!
+<input type="checkbox" name="optout" value="skeptical" disabled>No Thank You!
 <br>
 
- <center><img id="header-image" src="IMG_2319.jpg" alt="" width="60%"></center>
+<label for="marketing">How did you hear about me?</label>
+<select name="marketing">
+  <optgroup label="Online">
+    <option value="social">Social Media (FB, Twitter, LinkedIn)</option>
+    <option value="github">Online Portfolio (GitHub)</option>
+    <option value="search">Search Engine</option>
+    <option value="email">Email</option>
+  </optgroup>
+  <optgroup label="In-Person">
+    <option value="networking">We met at a networking event</option>
+    <option value="referral">Personal referral</option>
+    <option value="random">We met somewhere else</option>
+    <option value="random">We met at church</option>
+    <option value="random">We met at the club</option>
+  </optgroup>
+  <option value="other">Other</option>
+</select>
+      <div id="tip">
+           <textarea id="subject" name="subject" placeholder="Write something.." style="height:100px"></textarea>
+        <input type="submit" value="Submit">
+      </div>
+      </form>
+    </div>
+    <!-- end of contact sheet -->
 
-<center><h1>WCLG Port Saint Lucie FL.</i></h1></center>
-<center><h1 id="secondary"> Happy New Years 2018!!!!</h1></center><br>
-  <p><h2> Years end is neither an end nor a beginning but a going on, with all the wisdom that experience can instill in us. Cheers to a new year and another chance for us to get it right.</h2></p>
+  </section>
+  <div class="ping1">
+    <div class="ptext">
+      <span class="border">
+        Thanks for Visting Larry's website
+      </span>
+    </div>
+  </div>
 
-  <br>
-
-  <h2>Contact Me:</h2>
+  <!-- <h2>Contact Me:</h2>
 <a href="https://github.com/LarryHudson322"><i class="fa fa-github"style="font-size:30px"></i> </a>
 <a href="http://www.instagram.com/LHudson3222"><i class="fa fa-instagram"style="font-size:30px"></i> </a>
 <a href="https://plus.google.com/u/0/"><i class="fa fa-google plus"style="font-size:30px"></i> </a>
 <a href="mailto:lhudson322@gmail.com"><i class="fa fa-envelope"style="font-size:30px"></i> </a>
-<a href="tel:423-308-7730"><i class="fa fa-phone"style="font-size:30px"></i> </a><br>
+<a href="tel:423-308-7730"><i class="fa fa-phone"style="font-size:30px"></i> </a><br> -->
+<!-- <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button> -->
 
-
-<br>
-  @ 2018 LJH
+<a href="" class="scrollup">Home</a>
 </body>
 </html>
+<script text=JavaScript src=".js">
